src/App.css
/* ... */
.job {
  text-align: left;
  white-space: nowrap;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
}

.name {
  color: #0A3200;;
}


::-webkit-scrollbar {
  width: 5px;
  @media only screen and (max-width: 720px) {
    display: none;
  }
}


::-webkit-scrollbar-track {
  background: #f1f1f1; 
}


::-webkit-scrollbar-thumb {
  background: #888; 
}

::-webkit-scrollbar-thumb:hover {
  background: #555; 
}


/* Noticias */
#noticiasContent {
  gap: 20px;
  justify-content: start;
  align-items: center;
  @media only screen and (max-width: 720px) {
    min-height: calc(100vh - 4rem);
  }
}


.limitWidth {
  display: flex;
  flex-direction: column;
  width: 90%;
  gap: 10px;
  height: 80%;
}


.newPostModal {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  max-width: 100vw;
  height: 100vh;
  background-color: #e5e4e4;
  z-index: 1;
  gap: 10px;
}

.newPost {
  width: 40vw;
  height: 90vh;
}

.posts {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  width: 70%;
  gap: 60px;
  @media only screen and (max-width: 981px) {
    width: 88%;
    margin: 0 5vw;  
  }
}

.post {
  outline: 2px solid #408080;
  padding: 20px;
  overflow-y: scroll;

}

.postPreview {
  outline: 2px solid #408080;
  padding: 20px;
  width: 100%;
  height: fit-content;
  display: flex;
  gap: 20px;
  overflow: hidden;
  cursor: pointer;
  @media only screen and (max-width: 720px) {
    padding: 0px;
    gap: 0;
  }
}

.postPreview:hover {
  background-color: #40808015;
}

.postInfo {
  margin-bottom: 20px;
}

.postInfoPreview {
  width: 100%;
  padding: 5px;
}
.postTitle {
  border-bottom: 1px solid grey;
}

.inputPostTitle {
  background-color: transparent;
  border: none;
  width: 100%;
  height: 48px;
  border: 1px solid grey;
  font-family: "Garamond";
  display: block;
  font-size: 2em;
  font-weight: bold;
}

.inputPostContent {
  font-family: "Garamond";
  font-size: 20px;
  width: 100%;
  min-height: max-content;
  background-color: transparent;
  outline: none;
  border: none;
  height: 85%;
  resize: none;
  border: 1px solid grey;
}

.postPreviewImage {
  height: 100% !important;
  width: 130px !important;
  background-color: red;
  object-fit: cover;
  object-position: center;
}

.postImage {
  float: left;
  background-color: red;
  margin-right: 20px;
  width: 40%;
  height: auto;
}

.textSpan {
  display: block;
  white-space: pre-wrap;
  height: 100%;
}

.textSpanPreview {
  display: block;
  height: 30px;
  width: 55vw;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: clip;  
  @media only screen and (max-width: 981px) {
    width: 70vw;
  }
  @media only screen and (max-width: 881px) {
    width: 67vw;
  }
  @media only screen and (max-width: 685px) {
    width: 65vw;
  }
  @media only screen and (max-width: 645px) {
    width: 63vw;
  }
  @media only screen and (max-width: 617px) {
    width: 61vw;
  }
  @media only screen and (max-width: 524px) {
    width: 58vw;
  }
  @media only screen and (max-width: 480px) {
    width: 55vw;
  }
}
.paragraph {
  color: #0A3200;
  text-align: justify;
  margin-bottom: 10px;
}

.sign {
  width: 100%;
  text-align: end;
  margin-top: 10px;
  color: #408080;
  font-weight: 800;
}

.postBox {
  display: block;
  height: fit-content;
  width: 100%;
  background-color: transparent;
  border: none;
  text-align: left;
  white-space: pre;
}

.postImgBox {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  right: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.3);
}

.modalBox {
  background-color: white;
  width: fit-content;
  max-width: 300px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  text-align: center;
  gap: 20px;
  border-radius: 20px;
}

.editMemberForm {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

#editBtn {
  margin-top: 5px;
}

#arrowBtnUp {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  border-radius: 10px 0 0 10px ;
}

#arrowBtnDown {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  border-radius: 0 10px 10px  0;
  border-left: none;
}
.closeBtn {
  display: flex;
  justify-content: space-between;
  font-family: Arial;
  width: 100%;
}

label {
  display: flex;
  justify-content: space-between;
  gap: 5px;
  width: 100%;
}

.none {
  display: none;
}

.adminBtn {
  font-size: 12px;
  height: fit-content;
  width: fit-content;
  padding: 3px 5px;
  background-color: #40808084;
  color: #0A3200;
  border: 1px solid #0A3200;
  border-radius: 10px;
  cursor: pointer;
}

.adminBtn:hover {
  background-color: #408080;
  color: white;
}

.adminBtn:active {
  background-color: #2d5c5c;
  color: white;
}
.adminBtn:disabled {
  background-color: #67676793;
  color: #0A3200;
  cursor: default;
}

.deleteBtn {
  font-size: 12px;
  height: fit-content;
  width: fit-content;
  padding: 3px 5px;
  color: #0A3200;
  border: 1px solid #0A3200;
  border-radius: 10px;
  cursor: pointer;
  background-color: rgba(193, 54, 54, 0.604);
}

.deleteBtn:hover {
  background-color: rgb(193, 54, 54);
  color: white;
}

.deleteBtn:active {
  background-color: rgb(137, 39, 39);
  color: white;
}

.deleteBtn:disabled {
  background-color: #67676793;
  color: #0A3200;
  cursor: default;
}

.addBtn {
  display: flex;
  align-items: center;
  font-size: 30px;
  height: 20.73px;
  background-color: #40808084;
  color: #0A3200;
  border: 1px solid #0A3200;
  cursor: pointer;
}

.addBtn:hover {
  background-color: #408080;
  color: white;
}
.addBtn:active {
  background-color: #2d5c5c;
  color: white;
}

.buttonWrapper {
  display: flex;
  gap: 20px;
  align-items: center;
}
/* ... */

